[gd_scene load_steps=4 format=3 uid="uid://ccfatw1jfqdsj"]

[ext_resource type="Script" path="res://scripts/stage.gd" id="1_oy4sk"]
[ext_resource type="PackedScene" uid="uid://dqa8rxawmxury" path="res://scenes/player_character.tscn" id="2_kowcy"]
[ext_resource type="PackedScene" uid="uid://0jmv4y7hvrwr" path="res://scenes/dumb_enemy.tscn" id="2_q0wx1"]

[node name="Stage" type="Node"]
script = ExtResource("1_oy4sk")
enemy_scenes = Array[PackedScene]([ExtResource("2_q0wx1")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerBulletContainer" type="Node" parent="."]

[node name="EnemyContainer" type="Node" parent="."]

[node name="PlayerCharacter" parent="." instance=ExtResource("2_kowcy")]
position = Vector2(385, 206)
wall_min_slide_angle = 1.5708

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(388, 288)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
